--- a/html-css/module-04/css/styles.css
+++ b/html-css/module-04/css/styles.css
@@ -100,8 +100,10 @@ html{
 }
 .features-list-item{
     float: left;      
-    /* margin: 0 30px 30px 0; */
-    width: 255px;   
+    width: 255px;  
+    background-color: #323232; 
+    margin: 0;
+    padding: 0;
 }
 .features-list-item:not(:nth-child(4n)){
     margin-right: 30px;
@@ -110,6 +112,9 @@ html{
     margin-bottom: 30px;
 }
 
+.features-list-item:hover{
+    background-color: rgb(26, 188, 156);
+}
 
 .features-list a{
     text-decoration: none;
@@ -118,10 +123,25 @@ html{
     font-size: 18px;
     line-height: 32px; 
     color: #ffffff;
-    padding: 4px 58px 4px 14px ;    
-    background-color: #323232;
-    width: 255px;
-    height: 40px;
+}
+
+.box{
+    padding: 0 0 0 5px;    
+}
+
+.item{
+    float: left;
+    margin: 0;
+    padding: 0;
+   width: 200px;
+    /* width: 190px; */
+}
+.price{
+    float: right;
+    background-color: rgb(140, 140, 140, 0.8);
+    width: 50px;
+    margin: 0;
+    padding: 0 0 0 7px;
 }
 
 
@@ -175,13 +195,12 @@ background-position:center;*/
 
 
 
-
-.features-list a:hover,
+/* .features-list a:hover,
 .features-list a:focus{
     cursor: pointer;
     color: #ffffff;
     background: #1abc9c;
-}
+} */
 /* .features-list a>span:hover,
 .features-list a>span:focus {
     cursor: pointer;
