--- a/html-css/module-04/css/styles.css
+++ b/html-css/module-04/css/styles.css
@@ -18,7 +18,7 @@ html{
 }
 .site-navigation{
     padding: 40px 0;
-
+    
     margin-bottom: 40px;
 }
 
@@ -31,7 +31,6 @@ html{
     color: #555252;
     padding: 0;
     margin: 0;
-    /* float: left; */
 }
 
 .site-logo::first-letter{
@@ -43,6 +42,10 @@ html{
     text-decoration: none;
     color: #0f0101;
     text-transform: uppercase;
+    /* float: left; */
+}
+.site-navigation a:first-child {
+    float: left;
 }
 
 .site-navigation-list{
@@ -52,9 +55,8 @@ html{
     font-size: 14px;
     line-height: 11px;
     font-weight: 700;
-    width: 500px;
     margin: 0;
-    margin-top: -20px;
+    margin-top: 10px;
     padding: 0;
     float: right;
 }
@@ -80,7 +82,8 @@ html{
     line-height: 32px;
     color: #555252;
     text-align: center;
-    
+    margin: 0;
+    margin-bottom: 80px;
 }
 .main-heading::after{
     background: #4ec6ab;
@@ -92,6 +95,10 @@ html{
 }
 
 /* FEATURES */
+.features{
+    margin-bottom: 105px;
+}
+
 .features-list{
     list-style: none;
     text-transform: uppercase;
@@ -101,19 +108,23 @@ html{
 .features-list-item{
     float: left;      
     width: 255px;  
-    background-color: #323232; 
     margin: 0;
     padding: 0;
+    
 }
 .features-list-item:not(:nth-child(4n)){
     margin-right: 30px;
 }
-.features-list-item:not(:nth-child(4n+4)){
+.features-list-item:not(:nth-child(n+4)){
     margin-bottom: 30px;
 }
 
-.features-list-item:hover{
+.features-list-item:hover .item{
     background-color: rgb(26, 188, 156);
+}
+
+.features-list-item:hover  .price{
+    background-color:rgb(127, 217, 199);
 }
 
 .features-list a{
@@ -126,87 +137,37 @@ html{
 }
 
 .box{
-    padding: 0 0 0 5px;    
+    padding: 0;    
+    margin: 0;
 }
 
 .item{
     float: left;
     margin: 0;
     padding: 0;
-   width: 200px;
+    padding-left: 10px;
+    width: 200px;
+    background-color: #323232;
     /* width: 190px; */
 }
 .price{
     float: right;
-    background-color: rgb(140, 140, 140, 0.8);
-    width: 50px;
+    background-color: #8c8c8c;
+    width: 55px;
     margin: 0;
     padding: 0 0 0 7px;
 }
 
 
-.features-list-item::before{
-    content: "";
+
+.image-product{
     display: block;
     background-color: #e9f0fd;
     height: 280px;
+    width: 255px;
     background-position: center;
-    background-repeat: no-repeat;
+    backgroung-repeate: none;
 }
-
-.product1::before{
-    background-image: url(../images/product1.png);
-}
-.product2::before{
-    background-image: url(../images/product2.png);
-}
-.product3::before{
-    background-image: url(../images/product3.png);
-}
-.product4::before{
-    background-image: url(../images/product4.png);
-}
-.product5::before{
-    background-image: url(../images/product5.png);
-}
-.product6::before{
-    background-image: url(../images/product6.png);
-}
-.product7::before{
-    background-image: url(../images/product7.png);
-}
-.product8::before{
-    background-image: url(../images/product8.png);
-}
-
-
-/* background-image:;
-background-repeate: no repeate;
-background-position:center;*/
-
-
-
-/* Хрен пойми как это сделать
-.features-list-item a::after:nth-child(n){
-    display: inline;
-    content: "26$";
-    clear: both;
-} */
-
-
-
-/* .features-list a:hover,
-.features-list a:focus{
-    cursor: pointer;
-    color: #ffffff;
-    background: #1abc9c;
-} */
-/* .features-list a>span:hover,
-.features-list a>span:focus {
-    cursor: pointer;
-    color: #ffffff;
-    background: #7fd9c7;
-} */
 
 
 
@@ -248,6 +209,7 @@ float: left;
     font-weight: 400;
     font-size: 14px;
     line-height: 26px;
+    /* margin-bottom: 14px; */
 }
 
 .blog-list-button{
@@ -255,10 +217,13 @@ float: left;
     font-weight: 300;
     color: #ffffff;
     background: #4ec6ab;
-    width: 160px;
-    height: 50px;
     border: 1px solid #4ec6ab;
-    border-radius: 6px;
+    border-radius: 5px;
+    text-decoration: none;
+    padding: 12px 45px;
+    float: left;
+   
+    
 }
 
 .blog-list-button:hover,
@@ -272,8 +237,9 @@ float: left;
 
 
 
-.clearfix{
+.clearfix::after{
     content: "";
     display: table;
     clear: both;
+    
 }
