--- a/html-css/module-09/css/styles.css
+++ b/html-css/module-09/css/styles.css
@@ -31,10 +31,11 @@
 }
 
 .form{
-    margin: 0 ;
+    margin: 0;
     padding: 0;
     list-style: none;
     display: flex;
+    justify-content: center;
    
 }
 .form-link{
@@ -48,13 +49,19 @@
     padding: 8px 16px;
     border: 2px solid transparent;
     border-radius: 40px;
+    /* display: block; */
 
 }
 
+.form-link:hover,
+.form-link:focus{
+    border-color: #ffffff ;
+}
 
 /* HEADER CONTENT */
 .header-content{
     padding: 30px 0 140px 0;
+
 }
 
 .title-block{
@@ -114,8 +121,8 @@
     font-size: 22px;
     font-weight: 700;
     text-align: center;
-    /* margin: 0;
-    padding: 0; */
+    margin: 0;
+    padding: 0;
     margin-bottom: 17px;
 }
 
@@ -212,7 +219,3 @@
 }
 
 /* MAIN END */
-
-[class*='col-'] h2 p a {
-    text-align: center;
-}
